--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,35 @@
     <!-- Base application theme. -->
     <style name="Theme.Eats" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/red_500</item>
+        <item name="colorPrimaryVariant">@color/red_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/blue_200</item>
+        <item name="colorSecondaryVariant">@color/blue_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
+        <!-- shape -->
+        <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.Eats.Large.Rounded</item>
+        <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.Eats.Large.Rounded</item>
+        <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.Eats.Large.Rounded</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
         <item name="colorDotProgress">@color/black</item>
+        <item name="colorTheme">@color/white</item>
+        <item name="colorTextTheme">@color/black</item>
+
+
     </style>
+
+    <!-- custom TextInputLayout-->
+
+    <style name="customEditTextOutline" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_marginEnd">18dp</item>
+        <item name="android:layout_marginStart">18dp</item>
+    </style>
+
 </resources>
