--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -11,6 +11,8 @@
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
         android:elevation="0dp"
+        app:title="Agregar personas"
+        app:titleTextColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
