--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,13 +17,14 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
         android:layout_gravity="bottom|end"
         android:id="@+id/fab_add_person_home"
         android:contentDescription="@string/text_context_description"
         android:layout_margin="15dp"
         app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
         app:backgroundTint="@color/blue_500"
-        android:tint="@color/white"
-        android:src="@drawable/ic_outline_create_24" />
+        app:tint="@color/white"
+        app:srcCompat="@drawable/ic_outline_create_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
