--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- <color name="red_200">#30EF9A9A</color> -->
-    <color name="red_200">#20F44336</color>
-    <color name="red_500">#FFF44336</color>
-    <color name="red_700">#FFD32F2F</color>
+    <color name="red_200">#204CAF50</color>
+    <color name="red_500">#FF4CAF50</color>
+    <color name="red_700">#FF388E3C</color>
     <color name="blue_200">#FF90CAF9</color>
     <color name="blue_500">#FF2196F3</color>
     <color name="blue_700">#FF1976D2</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_0">#10FFFFFF</color>
+    <color name="white_transparent">#40FFFFFF</color>
 </resources>
