--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,21 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
+        <!-- animation  -->
+        <item name="android:windowContentTransitions">true</item>
+
+        <!-- navigation Bar en la parte inferior-->
+        <!--        <item name="android:navigationBarColor">?attr/primaryColor</item>-->
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+
+        <!-- transition -->
+<!--        <item name="android:windowEnterTransition">@transition/activity_slide</item>-->
+<!--        <item name="android:windowExitTransition">@transition/activity_slide</item>-->
+
+        <!-- specify shared element transitions -->
+<!--        <item name="android:windowSharedElementEnterTransition">@transition/changebounds</item>-->
+<!--        <item name="android:windowSharedElementExitTransition">@transition/changebounds</item>-->
+
         <!-- Customize your theme here. -->
         <item name="colorDotProgress">@color/black</item>
         <item name="colorTheme">@color/white</item>
@@ -31,6 +46,16 @@
     <style name="customEditTextOutline" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_marginEnd">18dp</item>
         <item name="android:layout_marginStart">18dp</item>
+    </style>
+
+    <!-- FullScreenDialog -->
+
+    <style name="AppThemeDialogCustom" parent="Theme.AppCompat.Light.DialogWhenLarge">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:dialogCornerRadius" tools:targetApi="p">10dp</item>
+        <item name="android:windowMinWidthMajor">100%</item>
+        <item name="android:windowMinWidthMinor">100%</item>
+        <item name="android:layout_margin">0dp</item>
     </style>
 
 </resources>
