ready create user in db local :watermelon:
ready create user in db local and view detail user with respective data shared with Event-Bus :memo:

--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -10,11 +10,16 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/red_500"
         app:elevation="4dp"
+        app:titleTextColor="@color/white"
+        style="@style/Widget.MaterialComponents.Toolbar.Primary"
+        app:navigationIcon="@drawable/ic_round_keyboard_backspace_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
