--- a/app/src/main/res/menu/menu_item_drawer.xml
+++ b/app/src/main/res/menu/menu_item_drawer.xml
@@ -29,8 +29,9 @@
         <item
             android:id="@+id/item_settings"
             android:icon="@drawable/ic_baseline_settings_24"
-            android:title="Ajustes"
+            android:title="@string/text_title_item_settings"
             app:showAsAction="always" />
+
     </group>
 
     <group
