--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -27,5 +27,8 @@
         <item name="colorDotProgress">@color/white</item>
         <item name="colorTheme">@color/black</item>
         <item name="colorTextTheme">@color/white</item>
+
     </style>
+
+    <style name="ToolbarTheme" parent="ThemeOverlay.MaterialComponents.ActionBar"/>
 </resources>
