--- a/app/src/main/res/drawable/bg_circular.xml
+++ b/app/src/main/res/drawable/bg_circular.xml
@@ -13,6 +13,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="100dp" />
             <solid android:color="@color/blue_500"/>
+            <stroke android:color="@color/white" android:width="3dp"/>
         </shape>
 
     </item>
