--- a/app/src/main/res/drawable/bg_circular_transparent.xml
+++ b/app/src/main/res/drawable/bg_circular_transparent.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/white">
+    android:color="@color/blue_500">
     <item android:gravity="center">
         <shape android:shape="rectangle">
             <corners android:radius="100dp" />
+            <solid android:color="@color/white"/>
         </shape>
 
     </item>
