--- a/app/src/main/res/drawable/bg_corner_item_menu_drawer.xml
+++ b/app/src/main/res/drawable/bg_corner_item_menu_drawer.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:bottomRightRadius="40dp"
-        android:topRightRadius="40dp" />
-    <padding
-        android:bottom="100dp"
-        android:top="100dp" />
-    <solid android:color="@color/bg_state_menu_item_drawer" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/white">
+
+    <item
+        android:gravity="center"
+        android:right="5dp">
+
+        <shape android:shape="rectangle">
+
+
+            <corners
+                android:bottomRightRadius="40dp"
+                android:topRightRadius="40dp" />
+
+            <solid android:color="@color/bg_state_menu_item_drawer" />
+        </shape>
+
+    </item>
+</ripple>
