--- a/app/src/main/res/layout/fragment_show_image.xml
+++ b/app/src/main/res/layout/fragment_show_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,37 +7,47 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_show_image"
-        app:navigationIcon="@drawable/ic_round_close_24"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-
-    <com.jsibbold.zoomage.ZoomageView
-        android:id="@+id/img_image_account"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/cuenta"
-        android:layout_below="@id/toolbar_show_image"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:navigationIcon="@drawable/ic_round_close_24" />
+
+    <com.jsibbold.zoomage.ZoomageView
+        android:id="@+id/img_image_account"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/cuenta"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_show_image"
         app:zoomage_doubleTapToZoom="true"
         app:zoomage_restrictBounds="true"
-        app:zoomage_translatable="false" />
+        app:zoomage_translatable="true" />
 
-    <com.google.android.material.button.MaterialButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginVertical="20dp"
-        android:textAllCaps="false"
-        android:visibility="gone"
-        android:paddingHorizontal="20dp"
+        android:contentDescription="@string/text_context_description"
         android:layout_marginHorizontal="30dp"
-        android:text="@string/text_ready"
-        android:textSize="18sp"
-        app:backgroundTint="@color/blue_500" />
+        android:layout_marginVertical="20dp"
+        app:backgroundTint="@color/blue_500"
+        app:tint="@color/white"
+        app:rippleColor="@color/white"
+        app:srcCompat="@drawable/ic_round_next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_show_image"
+        app:layout_constraintVertical_bias="1.0" />
 
-</RelativeLayout>
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
