--- a/app/src/main/res/menu/menu_item_drawer.xml
+++ b/app/src/main/res/menu/menu_item_drawer.xml
@@ -7,29 +7,29 @@
         android:menuCategory="secondary"
         android:orderInCategory="1">
         <item
-            android:id="@+id/item_home"
+            android:id="@+id/nav_home"
             android:checkable="true"
             android:checked="true"
             android:icon="@drawable/ic_baseline_storefront_24"
-            android:title="@string/text_title_item_home"
+            android:title="@string/menu_home"
             app:showAsAction="always" />
 
         <item
-            android:id="@+id/item_all"
+            android:id="@+id/nav_all"
             android:icon="@drawable/ic_baseline_ballot_24"
-            android:title="Todos"
+            android:title="@string/menu_all"
             app:showAsAction="always" />
 
         <item
-            android:id="@+id/item_home_recent"
+            android:id="@+id/nav_recent"
             android:icon="@drawable/ic_round_storage_24"
-            android:title="Recientes"
+            android:title="@string/menu_recent"
             app:showAsAction="always" />
 
         <item
-            android:id="@+id/item_settings"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
-            android:title="@string/text_title_item_settings"
+            android:title="@string/menu_setting"
             app:showAsAction="always" />
 
     </group>
