--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,10 @@
     <color name="blue_500">#FF2196F3</color>
     <color name="blue_700">#FF1976D2</color>
     <color name="black">#FF000000</color>
+    <color name="black_tranparent">#10000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_0">#10FFFFFF</color>
     <color name="white_transparent">#40FFFFFF</color>
+    <color name="colorActiveDots">#FF4CAF50</color>
+    <color name="colorInactiveDots">#204CAF50</color>
 </resources>
