--- a/app/src/main/res/layout/fragment_all.xml
+++ b/app/src/main/res/layout/fragment_all.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fragment All"
-        android:textSize="30sp"
+        android:text="Pick Files"
+        android:textSize="20sp"
+        android:id="@+id/btn_pick_files"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
