--- a/app/src/main/res/layout/items_files_chooser.xml
+++ b/app/src/main/res/layout/items_files_chooser.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imgv_icon_files"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/cuenta" />
 
         <TextView
