--- a/app/src/main/res/layout/items_files_chooser.xml
+++ b/app/src/main/res/layout/items_files_chooser.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/imgv_icon_files"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             android:scaleType="centerCrop"
             android:src="@drawable/cuenta" />
 
@@ -27,6 +27,8 @@
             android:ellipsize="end"
             android:freezesText="true"
             android:maxLines="1"
+            android:paddingStart="5dp"
+            android:paddingTop="10dp"
             android:text="Title file"
             android:textAllCaps="false"
             android:textColor="@color/white"
